[project]
name = "foss4g"
version = "1.0.0"
description = "Interactive Jupyter notebooks from FOSS4G Auckland 2025 - High-performance geospatial visualization with Lonboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.1.1",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.10",
    "lonboard>=0.13.0",
    "matplotlib>=3.10.7",
    "palettable>=3.3.3",
    "pyarrow>=22.0.0",
]
